Update code and README structure